data/diff_tests/wasmtime/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_132.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\8d\80\80\80\00\01\03\65\6e\76\05\66"
    "\75\6e\63\31\00\00\03\82\80\80\80\00\01\00\0a\95"
    "\80\80\80\00\01\8f\80\80\80\00\00\02\7f\10\00\41"
    "\01\41\00\45\0d\00\00\0b\0b"
  )
""
)